--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,16 @@
-// Follow the order in the readme
+//variables import
+@import 'variables';
+
+@import 'footer';
+
+@import 'mixins';
+
+@import 'reset';
+
+@import 'global';
+
+@import 'navigation';
+
+@import 'home-page';
+
+
