--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,10 @@
-// Mixins in here
+// Mixins in here 
+.btnstyles(@bgcolor: #296e6e, @font-color: white){
+    background-color: @bgcolor;
+    font-size: 14px;
+    height: 60px;
+    width: 90%;
+    border-radius: 25px; 
+    color: @font-color;
+}
+
