--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
-// Navigation Styles here
+
+
+
+header {
+    display: flex;
+
+    .funbus{
+        width: 50%;
+    }
+
+    .navbar {
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        font-size: 1.6rem;
+
+        
+        a {
+        margin-right: 2.5rem;
+        text-decoration: none;
+        color: black;
+        }
+  }
+}
+  
+
+
